feat: updated navigation colors

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="container mx-auto relative">
           <!-- Navigation -->
           <nav
-            class="grid grid-cols-2 lg:grid-cols-[116px_1fr_max-content] items-center bg-blue-25 rounded-25 p-2 pl-6 mx-4 lg:mx-0 mb-[118px] border-blue-a300 border"
+            class="text-white grid grid-cols-2 lg:grid-cols-[116px_1fr_max-content] items-center bg-gray-a200 backdrop-blur-sm rounded-25 p-2 pl-6 mx-4 lg:mx-0 mb-[118px] border-gray-a300 border"
           >
             <a href="/" class="flex items-end gap-2">
               <svg
@@ -422,7 +422,7 @@
       <div class="container mx-auto">
         <!-- Navigation -->
         <nav
-          class="grid grid-cols-2 lg:grid-cols-[116px_1fr_max-content] items-center bg-blue-25 rounded-25 p-2 pl-6 mx-4 lg:mx-0 mb-[118px] border-blue-a300 border"
+          class="text-white grid grid-cols-2 lg:grid-cols-[116px_1fr_max-content] items-center bg-gray-a200 backdrop-blur-sm rounded-25 p-2 pl-6 mx-4 lg:mx-0 mb-[118px] border-gray-a300 border"
         >
           <a href="/" class="flex items-end gap-2">
             <svg
