--- a/index.html
+++ b/index.html
@@ -419,108 +419,14 @@
 
     <!-- Footer -->
     <footer class="bg-blue-100 pt-8 pb-9">
-      <div class="container mx-auto">
-        <!-- Navigation -->
-        <nav
-          class="text-white grid grid-cols-2 lg:grid-cols-[116px_1fr_max-content] items-center bg-gray-a200 backdrop-blur-sm rounded-25 p-2 pl-6 mx-4 lg:mx-0 mb-[118px] border-gray-a300 border"
-        >
-          <a href="/" class="flex items-end gap-2">
-            <svg
-              width="45"
-              height="42"
-              viewBox="0 0 45 42"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M15.6436 2.47821C15.8686 2.62875 16.1337 2.71035 16.4056 2.71272C16.5875 2.71453 16.7678 2.68082 16.9363 2.61355C17.1048 2.54628 17.2581 2.44679 17.3873 2.32081C17.5165 2.19484 17.6191 2.04489 17.6891 1.87963C17.7591 1.71438 17.7951 1.5371 17.7951 1.35804C17.7954 1.09022 17.7152 0.828284 17.5646 0.605271C17.414 0.382257 17.1998 0.208144 16.9488 0.104878C16.6979 0.00161215 16.4216 -0.0261843 16.1546 0.0249957C15.8877 0.0761757 15.6421 0.20404 15.4488 0.392469C15.2556 0.580899 15.1233 0.821458 15.0686 1.08382C15.014 1.34619 15.0394 1.61861 15.1417 1.86676C15.2441 2.1149 15.4187 2.32766 15.6436 2.47821ZM7.02738 6.07033C7.53384 6.07033 7.94441 5.66599 7.94441 5.16721C7.94441 4.66843 7.53384 4.26409 7.02738 4.26409C6.52092 4.26409 6.11035 4.66843 6.11035 5.16721C6.11035 5.66599 6.52092 6.07033 7.02738 6.07033ZM44.2746 15.6967C44.2886 16.1921 44.1976 16.685 44.0074 17.1438C43.8172 17.6026 43.532 18.0174 43.17 18.3616C42.427 19.0421 41.45 19.4204 40.4354 19.4204C39.4208 19.4204 38.4438 19.0421 37.7008 18.3616C36.9928 17.6502 36.5962 16.6938 36.5962 15.6976C36.5962 14.7014 36.9928 13.745 37.7008 13.0336C38.4432 12.352 39.4204 11.9729 40.4354 11.9729C41.4504 11.9729 42.4276 12.352 43.17 13.0336C43.532 13.3775 43.8172 13.7919 44.0074 14.2505C44.1976 14.709 44.2886 15.2016 44.2746 15.6967ZM43.5799 23.717V41.6494H37.2944V23.717H43.5799ZM33.8605 41.6494H30.5449C28.6067 41.6494 27.2109 41.2503 26.3575 40.452C25.5042 39.6538 25.0775 38.489 25.0775 36.9576C22.8289 40.3192 19.5516 42 15.2455 42C11.9109 42 9.23508 41.236 7.21809 39.708C5.20109 38.18 4.19318 36.0796 4.19434 33.4067C4.19434 30.3895 5.27983 28.069 7.45082 26.4452C9.62181 24.8214 12.7805 24.0078 16.9268 24.0044H24.4314V22.2272C24.4314 20.5852 23.8525 19.2967 22.6946 18.3616C21.5368 17.4266 19.9268 16.9585 17.8646 16.9573C16.041 16.9573 14.5358 17.349 13.349 18.1324C12.1622 18.9158 11.4541 19.9563 11.2249 21.254H5.05926C5.36956 18.3143 6.68837 16.0337 9.01567 14.4122C11.343 12.7907 14.387 11.9788 18.1477 11.9765C22.1423 11.9765 25.2257 12.8933 27.3979 14.7269C29.57 16.5605 30.6555 19.1957 30.6543 22.6326V34.2055C30.6543 35.5738 31.3137 36.2609 32.6326 36.2666H33.8483L33.8605 41.6494ZM16.6419 28.5884C14.7037 28.5884 13.2106 28.9607 12.1627 29.7053C11.1149 30.4499 10.5938 31.548 10.5996 32.9996C10.5825 33.5856 10.7082 34.1671 10.9662 34.6953C11.2243 35.2236 11.6072 35.6832 12.0828 36.0357C13.0705 36.8008 14.4183 37.1828 16.1261 37.1817C18.7243 37.1817 20.7506 36.4941 22.2049 35.1189C23.6591 33.7437 24.4036 31.9089 24.4384 29.6146V28.5884H16.6419ZM0.917031 12.7924C0.917031 13.0418 0.711745 13.244 0.458515 13.244C0.205286 13.244 0 13.0418 0 12.7924C0 12.543 0.205286 12.3408 0.458515 12.3408C0.711745 12.3408 0.917031 12.543 0.917031 12.7924ZM26.5189 4.06568C26.1557 4.06568 25.8007 3.9596 25.4988 3.76087C25.1969 3.56213 24.9616 3.27967 24.8227 2.94921C24.6838 2.61876 24.6475 2.25515 24.7185 1.9044C24.7895 1.55365 24.9645 1.2315 25.2214 0.978727C25.4783 0.72595 25.8056 0.553894 26.1618 0.484327C26.518 0.41476 26.8872 0.450809 27.2226 0.58791C27.558 0.725011 27.8446 0.957006 28.0461 1.25455C28.2477 1.55208 28.355 1.9018 28.3547 2.25945C28.3547 2.49679 28.3072 2.73181 28.2149 2.95106C28.1226 3.17032 27.9874 3.36951 27.8169 3.53726C27.6464 3.705 27.444 3.83801 27.2213 3.92868C26.9986 4.01935 26.7599 4.06591 26.5189 4.06568ZM33.7836 9.54305C34.161 9.7914 34.6046 9.92396 35.0585 9.92396C35.6666 9.92396 36.25 9.68614 36.6802 9.26277C37.1104 8.8394 37.3523 8.26513 37.3528 7.66617C37.3531 7.21921 37.2188 6.78219 36.9669 6.4104C36.715 6.0386 36.3568 5.74873 35.9377 5.57745C35.5185 5.40617 35.0571 5.36118 34.6119 5.44817C34.1668 5.53516 33.7578 5.75022 33.4368 6.06615C33.1157 6.38208 32.897 6.78468 32.8084 7.22302C32.7197 7.66137 32.765 8.11577 32.9386 8.52874C33.1122 8.94171 33.4063 9.2947 33.7836 9.54305Z"
-                fill="url(#paint0_linear_2002_59)"
-              />
-              <defs>
-                <linearGradient
-                  id="paint0_linear_2002_59"
-                  x1="5.99998"
-                  y1="39"
-                  x2="43"
-                  y2="7.49993"
-                  gradientUnits="userSpaceOnUse"
-                >
-                  <stop stop-color="#2E67DE" />
-                  <stop offset="1" stop-color="#BB42F5" />
-                </linearGradient>
-              </defs>
-            </svg>
-
-            <div>
-              <span class="block font-medium">Agente</span>
-              <span class="block leading-3 font-medium">Imóvel</span>
-            </div>
-          </a>
-
-          <ul class="hidden lg:flex gap-6 justify-center">
-            <li class="text-xs font-medium">
-              <a href="#">Mercado Imobiliário</a>
-            </li>
-            <li class="text-xs font-medium">
-              <a href="#">Avaliação de Imóvel</a>
-            </li>
-            <li class="text-xs font-medium">
-              <a href="#">Simulador de Financiamento</a>
-            </li>
-            <li class="text-xs font-medium">
-              <a href="#">Corretor de Imóveis</a>
-            </li>
-            <li class="text-xs font-medium">
-              <a href="#">Sobre nós</a>
-            </li>
-          </ul>
-
-          <a href="#" class="hidden lg:flex btn btn-primary">Comece já!</a>
-
-          <button
-            data-open="false"
-            class="group flex items-center justify-center lg:hidden btn btn-primary justify-self-end p-4"
-          >
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              class="size-6 group-data-[open=true]:hidden"
-            >
-              <path
-                d="M9 6C9 5.448 9.448 5 10 5H21C21.552 5 22 5.448 22 6C22 6.552 21.552 7 21 7H10C9.448 7 9 6.552 9 6ZM21 11H3C2.448 11 2 11.448 2 12C2 12.552 2.448 13 3 13H21C21.552 13 22 12.552 22 12C22 11.448 21.552 11 21 11ZM14 17H3C2.448 17 2 17.448 2 18C2 18.552 2.448 19 3 19H14C14.552 19 15 18.552 15 18C15 17.448 14.552 17 14 17Z"
-                fill="white"
-              />
-            </svg>
-
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              class="size-6 group-data-[open=false]:hidden"
-            >
-              <path
-                d="M13.4143 12.0002L18.7073 6.70719C19.0983 6.31719 19.0983 5.68325 18.7073 5.29325C18.3163 4.90225 17.6842 4.90225 17.2933 5.29325L12.0003 10.5862L6.70725 5.29325C6.31625 4.90225 5.68425 4.90225 5.29325 5.29325C4.90225 5.68325 4.90225 6.31719 5.29325 6.70719L10.5862 12.0002L5.29325 17.2933C4.90225 17.6833 4.90225 18.3172 5.29325 18.7072C5.48825 18.9022 5.74425 19.0002 6.00025 19.0002C6.25625 19.0002 6.51225 18.9022 6.70725 18.7072L12.0003 13.4142L17.2933 18.7072C17.4882 18.9022 17.7443 19.0002 18.0003 19.0002C18.2563 19.0002 18.5123 18.9022 18.7073 18.7072C19.0983 18.3172 19.0983 17.6833 18.7073 17.2933L13.4143 12.0002Z"
-                fill="white"
-              />
-            </svg>
-          </button>
-        </nav>
-      </div>
 
       <!-- Footer main content -->
       <div class="container mx-auto text-white grid grid-cols-2 gap-[42px] pb-17.5">
         <!-- Subscribe section -->
         <div class="justify-self-center self-center max-w-[470px]">
-          <h2 class="uppercase text-7xl mb-4">Newsletter</h2>
+          <h2 class="uppercase text-7xl mb-4 font-secondary text-center">Newsletter</h2>
 
-          <p class="mb-8 text-center">
+          <p class="mb-8 text-center text-light-grey">
             Subscribe to the newsletter and receive information about promotions and new arrivals.
           </p>
 
@@ -651,7 +557,7 @@
           </ul>
 
           <!-- Location -->
-          <div class="flex gap-2 bg-gray-a200 rounded-5 p-4">
+          <div class="flex gap-2 bg-white bg-opacity-10 rounded-5 p-4">
             <svg
               width="18"
               height="20"
@@ -667,15 +573,15 @@
 
             <div class="leading-4">
               <h3 class="mb-2">Your City / Country</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.</p>
+              <p class="text-xs text-light-grey">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.</p>
             </div>
           </div>
         </div>
 
         <!-- Footer nav -->
         <nav class="grid grid-cols-2 grid-rows-[340px_160px_140px] font-medium text-gray-50">
-          <ul class="mb-8 flex flex-col gap-2 max-w-60">
-            <li class="mb-2 font-bold text-white">Valor do metro quadrado por bairro</li>
+          <ul class="mb-8 flex flex-col gap-2 text-sm">
+            <li class="mb-2 font-bold text-white text-base">Valor do metro quadrado por bairro</li>
 
             <li>
               <a href="#">INDIANOPOLIS</a>
@@ -711,8 +617,8 @@
             </li>
           </ul>
 
-          <ul class="mb-8 flex flex-col gap-2 max-w-56">
-            <li class="mb-2 font-bold text-white">Valor do metro quadrado por cidade</li>
+          <ul class="mb-8 flex flex-col gap-2 text-sm">
+            <li class="mb-2 font-bold text-white text-base">Valor do metro quadrado por cidade</li>
 
             <li>
               <a href="#">São Paulo</a>
@@ -747,8 +653,8 @@
             </li>
           </ul>
 
-          <ul class="flex flex-col gap-2 max-w-56 self-center">
-            <li class="mb-2 font-bold text-white">Avaliação de Imóvel</li>
+          <ul class="flex flex-col gap-2 text-sm self-center">
+            <li class="mb-2 font-bold text-white text-base">Avaliação de Imóvel</li>
 
             <li>
               <a href="#">Lorem ipsum dolor sit amet</a>
@@ -759,8 +665,8 @@
             </li>
           </ul>
 
-          <ul class="flex flex-col gap-2 max-w-56">
-            <li class="mb-2 font-bold text-white">Simulador de Financiamento Imobiliário</li>
+          <ul class="flex flex-col gap-2 text-sm">
+            <li class="mb-2 font-bold text-white text-base">Simulador de Financiamento Imobiliário</li>
 
             <li>
               <a href="#">Calculadora de Financiamento</a>
@@ -771,8 +677,8 @@
             </li>
           </ul>
 
-          <ul class="flex flex-col gap-2">
-            <li class="mb-2 font-bold text-white">Sobre nós</li>
+          <ul class="flex flex-col gap-2 text-sm">
+            <li class="mb-2 font-bold text-white text-base">Sobre nós</li>
 
             <li>
               <a href="#">Sobre a Agente Imóvel</a>
@@ -787,8 +693,8 @@
             </li>
           </ul>
 
-          <ul class="flex flex-col gap-2 self-center">
-            <li class="mb-2 font-bold text-white">Propdo</li>
+          <ul class="flex flex-col gap-2 text-sm self-center">
+            <li class="mb-2 font-bold text-white text-base">Propdo</li>
 
             <li>
               <a href="#">Propdo.com</a>
@@ -802,14 +708,14 @@
       </div>
 
       <!-- Bottom footer -->
-      <div class="flex justify-between items-center container mx-auto text-white pt-10">
+      <div class="flex justify-between items-center container mx-auto text-white pt-10 text-sm">
         <div class="flex items-center gap-1">
           <a href="#">Terms & Conditions</a>
-          <hr class="h-4 border border-white" />
+          <hr class="mx-2 h-4 border border-white" />
           <a href="#">Privacy Policy</a>
         </div>
 
-        <p>&copy; AgentImovel 2024. All Rights Reserved.</p>
+        <p class="text-light-grey">&copy; AgentImovel 2024. All Rights Reserved.</p>
       </div>
     </footer>
 
