--- a/index.html
+++ b/index.html
@@ -103,9 +103,13 @@
           </button>
         </nav>
 
-        <div class="grid grid-cols-1 lg:grid-cols-[minmax(0,533px)_1fr] gap-4 lg:gap-[52px]">
+        <div
+          class="grid grid-cols-1 lg:grid-cols-[minmax(0,533px)_1fr] items-center gap-4 lg:gap-[52px]"
+        >
           <div class="mx-4 lg:mx-0">
-            <h2 class="mb-4 lg:mb-8 text-[40px] leading-[48px] lg:text-7xl uppercase flex gap-3">
+            <h2
+              class="mb-4 lg:mb-8 text-[40px] leading-[48px] lg:text-7xl uppercase flex gap-3 font-secondary"
+            >
               <span class="text-blue-100">Mercado</span> Imobiliário
             </h2>
 
@@ -176,6 +180,10 @@
             </ol>
 
             <a href="#" class="btn btn-gradient hidden lg:flex">Mais Detalhes</a>
+          </div>
+
+          <div class="aspect-[585/459] w-[585px]">
+            <canvas id="chart"></canvas>
           </div>
 
           <a href="#" class="btn btn-gradient flex lg:hidden justify-center px-24 w-max mx-auto"
