feat: added mobile styles for chart area

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <!-- Chart section -->
       <section class="container mx-auto">
         <div
-          class="grid grid-cols-1 lg:grid-cols-[minmax(0,533px)_1fr] h-screen gap-4 lg:gap-[52px] border-l border-r border-blue-25"
+          class="grid grid-cols-1 lg:grid-cols-[minmax(0,533px)_1fr] lg:h-screen gap-4 lg:gap-[52px] border-l border-r border-blue-25"
         >
-          <div class="mx-4 lg:mx-0 grid content-center">
+          <div class="pt-8 lg:pt-0 mx-4 lg:mx-0 grid content-center">
             <h2
               class="mb-4 lg:mb-8 text-[40px] leading-[48px] lg:text-7xl uppercase flex gap-3 font-secondary"
             >
@@ -89,7 +89,7 @@
             <a href="#" class="btn btn-gradient hidden lg:flex">Mais Detalhes</a>
           </div>
 
-          <div class="border-l border-l-blue-25 grid content-center">
+          <div class="border-l border-l-blue-25 grid content-center overflow-auto">
             <h3 class="pb-6 mb-10 text-center font-medium text-gray-400 border-b border-b-blue-25">
               Índice de Imóveis 2024: Preços e Tendências:
             </h3>
@@ -99,7 +99,9 @@
             </div>
           </div>
 
-          <a href="#" class="btn btn-gradient flex lg:hidden justify-center px-24 w-max mx-auto"
+          <a
+            href="#"
+            class="btn btn-gradient flex lg:hidden justify-center px-24 mb-6 lg:mb-0 w-max mx-auto"
             >Mais Detalhes</a
           >
         </div>
